
(library
  (name game_state)
  (modules game_state)
  (libraries 
    core
    game_map
    player
    enemy
    fruit)
  (preprocess
  (pps ppx_jane bisect_ppx)))


(library
  (name enemy)
  (modules enemy)
  (libraries 
    core
    game_map
  )
  (preprocess
  (pps ppx_jane bisect_ppx)))


(library
  (name fruit)
  (modules fruit)
  (libraries 
    core
  )
  (preprocess
  (pps ppx_jane bisect_ppx)))

(library
  (name player)
  (modules player)
  (libraries 
    core
    game_map)
  (preprocess
  (pps ppx_jane bisect_ppx)))

(library
  (name game_map)
  (modules game_map)
  (libraries
    csv 
    core)
  (preprocess
  (pps ppx_jane bisect_ppx)))
 

(library
  (name render)
  (modules render)
  (libraries 
    core
    graphics
    game_state)
  (preprocess
  (pps ppx_jane bisect_ppx)))

(executable
  (name main)
  (modules main)
  (libraries
    ; game_state
    game_map
    game_state
    player
    render
    ; graphics
    ; enemy
    ; fruit
    ; objects
    ; player
    core
    stdlib
    core_unix
    core_unix.command_unix))
