(library
 (name game_map)
 (modules game_map)
 (libraries csv core common)
 (preprocess
  (pps ppx_jane bisect_ppx)))

(library
 (name common)
 (modules common)
 (libraries core)
 (preprocess
  (pps ppx_jane bisect_ppx)))

(library
 (name render)
 (modules render)
 (libraries
  core
  ; objects
  ; game_state
  game_map
  imagelib.unix
  graphics
  fruit
  enemy)
 (preprocess
  (pps ppx_jane bisect_ppx)))

(library
 (name game_state)
 (modules game_state)
 (libraries core game_map player enemy fruit render)
 (preprocess
  (pps ppx_jane bisect_ppx)))

(library
 (name enemy)
 (modules enemy)
 (libraries core game_map common)
 (preprocess
  (pps ppx_jane bisect_ppx)))

(library
 (name fruit)
 (modules fruit)
 (libraries core game_map common)
 (preprocess
  (pps ppx_jane bisect_ppx)))

(library
 (name player)
 (modules player)
 (libraries core game_map fruit common)
 (preprocess
  (pps ppx_jane bisect_ppx))
 (flags
  (:standard -w -37-69)))

(executable
 (name main)
 (modules main)
 (libraries
  enemy
  fruit
  game_map
  game_state
  player
  render
  core
  stdlib
  core_unix.command_unix))
